WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212747
REGRESSION(
r262184
): [GTK] Two fast/forms tests are crashing
https://bugs.webkit.org/show_bug.cgi?id=212747
Summary
REGRESSION(r262184): [GTK] Two fast/forms tests are crashing
Carlos Garcia Campos
Reported
2020-06-04 06:45:51 PDT
fast/forms/input-first-letter-edit.html [ Crash ] fast/forms/select/popup-closes-on-blur.html [ Crash ]
Attachments
Patch
(1.23 KB, patch)
2020-06-04 07:04 PDT
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2020-06-04 07:04:54 PDT
Created
attachment 401020
[details]
Patch
Diego Pino
Comment 2
2020-06-04 07:08:19 PDT
***
Bug 212748
has been marked as a duplicate of this bug. ***
EWS
Comment 3
2020-06-05 01:58:47 PDT
Committed
r262607
: <
https://trac.webkit.org/changeset/262607
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 401020
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug