REGRESSION(r262184): [GTK] Two fast/forms tests are crashing https://bugs.webkit.org/show_bug.cgi?id=212747

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2020-06-05
Reviewed by Adrian Perez de Castro.

* UIProcess/gtk/WebPopupMenuProxyGtk.cpp:
(WebKit::WebPopupMenuProxyGtk::handleKeyPress): Return early if the menu has already been closed.

Canonical link: https://commits.webkit.org/225613@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262607 268f45cc-cd09-0410-ab3c-d52691b4dbfc